force-app/main/default/objects/ConferenceForm__c/fields/Nominators_Name__c.field-meta.xml
<CustomField>
    <fullName>Nominators_Name__c</fullName>
    <description>Nominator&apos;s Name</description>
    <label>Nominator&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>