force-app/main/default/objects/ConferenceForm__c/fields/Nominees_Address__c.field-meta.xml
<CustomField>
    <fullName>Nominees_Address__c</fullName>
    <description>Nominee&apos;s Address (Street, City, State, Zip Code)</description>
    <label>Nominee&apos;s Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>