force-app/main/default/objects/ConferenceForm__c/fields/Nominees_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Nominees_Email_Address__c</fullName>
    <description>Nominee&apos;s Email Address</description>
    <label>Nominee&apos;s Email Address</label>
    <type>Email</type>
</CustomField>