force-app/main/default/objects/ConferenceForm__c/fields/Nominees_Organization__c.field-meta.xml
<CustomField>
    <fullName>Nominees_Organization__c</fullName>
    <description>Nominee&apos;s Organization</description>
    <label>Nominee&apos;s Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>