force-app/main/default/objects/ConferenceForm__c/fields/Nominees_Years_in_the_Field__c.field-meta.xml
<CustomField>
    <fullName>Nominees_Years_in_the_Field__c</fullName>
    <description>Nominee&apos;s Years in the Field (if applicable)</description>
    <label>Nominee&apos;s Years in the Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>