force-app/main/default/objects/ConferenceForm__c/fields/Non_Profit_Vendor_One_Day__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Vendor_One_Day__c</fullName>
    <label>Non Profit Vendor (One Day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>