force-app/main/default/objects/ConferenceForm__c/fields/OCFS_training_topic_for_session__c.field-meta.xml
<CustomField>
    <fullName>OCFS_training_topic_for_session__c</fullName>
    <description>Please check which OCFS training topic areas your session will address based on NYS regulations (check all that apply):</description>
    <label>OCFS training topic for session:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Child Development</fullName>
            </value>
            <value>
                <fullName>(2) Nutrition &amp; Health Needs</fullName>
            </value>
            <value>
                <fullName>(3) Program Development</fullName>
            </value>
            <value>
                <fullName>(4) Safety &amp; Security</fullName>
            </value>
            <value>
                <fullName>(5) Business Management &amp; Records</fullName>
            </value>
            <value>
                <fullName>(6) NYS Regulations &amp; Statutes</fullName>
            </value>
            <value>
                <fullName>(7) Child Abuse &amp; Maltreatment</fullName>
            </value>
            <value>
                <fullName>(8) NYS Child Abuse Regulations &amp; Statutes</fullName>
            </value>
            <value>
                <fullName>(10) ACEs</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>I&apos;m unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>