force-app/main/default/objects/ConferenceForm__c/fields/One_Day_Vendor_For_Profit__c.field-meta.xml
<CustomField>
    <fullName>One_Day_Vendor_For_Profit__c</fullName>
    <label>One Day Vendor (For Profit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>