force-app/main/default/objects/ConferenceForm__c/fields/Other_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Other_Assessment__c</fullName>
    <label>Other Assessment</label>
    <length>60</length>
    <type>Text</type>
</CustomField>