force-app/main/default/objects/ConferenceForm__c/fields/Other_Instructional_Method__c.field-meta.xml
<CustomField>
    <fullName>Other_Instructional_Method__c</fullName>
    <label>Other Instructional Method</label>
    <length>60</length>
    <type>Text</type>
</CustomField>