force-app/main/default/objects/ConferenceForm__c/fields/Other_Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>Other_Intended_Audience__c</fullName>
    <description>If you answered &quot;other&quot;, please describe your session&apos;s intended audience here.</description>
    <label>&apos;Other&apos; Intended Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>