force-app/main/default/objects/ConferenceForm__c/fields/Other_Session_Topic__c.field-meta.xml
<CustomField>
    <fullName>Other_Session_Topic__c</fullName>
    <description>If you answered &quot;other&quot;, please describe your session topic here.</description>
    <label>&apos;Other&apos; Session Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>