force-app/main/default/objects/ConferenceForm__c/fields/Parent_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Status__c</fullName>
    <formula>Host_Conference_Form__r.Submission_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Record Status</label>
    <type>Text</type>
</CustomField>