force-app/main/default/objects/ConferenceForm__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit/Credit Card</fullName>
            </value>
            <value>
                <fullName>Invoice Check</fullName>
            </value>
            <value>
                <fullName>Invoice PO</fullName>
            </value>
            <value>
                <fullName>EIP Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>