force-app/main/default/objects/ConferenceForm__c/fields/Photobooth__c.field-meta.xml
<CustomField>
    <fullName>Photobooth__c</fullName>
    <label>Photobooth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>