force-app/main/default/objects/ConferenceForm__c/fields/Physical_Activities_Track__c.field-meta.xml
<CustomField>
    <fullName>Physical_Activities_Track__c</fullName>
    <label>Physical Activities Track</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>