force-app/main/default/objects/ConferenceForm__c/fields/Platinum_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Sponsorship__c</fullName>
    <label>Platinum Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>