force-app/main/default/objects/ConferenceForm__c/fields/Presentation_Time__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Time__c</fullName>
    <description>Presentation Time (select ONE)</description>
    <label>Presentation Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I am able to present at the selected time</fullName>
            </value>
            <value>
                <fullName>I am not able to present at the selected time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>