force-app/main/default/objects/ConferenceForm__c/fields/Presenter_Bio__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Bio__c</fullName>
    <description>Presenter Bio (May be edited for advertising)</description>
    <label>Presenter Bio</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>