force-app/main/default/objects/ConferenceForm__c/fields/Professional_Headshots__c.field-meta.xml
<CustomField>
    <fullName>Professional_Headshots__c</fullName>
    <label>Professional Headshots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>