force-app/main/default/objects/ConferenceForm__c/fields/Program_Brochure_Advertisement__c.field-meta.xml
<CustomField>
    <fullName>Program_Brochure_Advertisement__c</fullName>
    <description>Program Brochure Advertisement</description>
    <label>Program Brochure Advertisement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Page Ad</fullName>
            </value>
            <value>
                <fullName>Half Page Ad</fullName>
            </value>
            <value>
                <fullName>Quarter Page Ad</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>