force-app/main/default/objects/ConferenceForm__c/fields/Program_County__c.field-meta.xml
<CustomField>
    <fullName>Program_County__c</fullName>
    <label>Program County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>