force-app/main/default/objects/ConferenceForm__c/fields/Program_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Zip_Code__c</fullName>
    <description>Program Zip Code</description>
    <label>Program Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>