force-app/main/default/objects/ConferenceForm__c/fields/Raffle_Donation_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Raffle_Donation_Delivery__c</fullName>
    <label>Raffle Donation Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Drop Off</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>