force-app/main/default/objects/ConferenceForm__c/fields/Raffle_Prize_Donation__c.field-meta.xml
<CustomField>
    <fullName>Raffle_Prize_Donation__c</fullName>
    <description>Raffle Prize Donation</description>
    <label>Raffle Prize Donation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>