force-app/main/default/objects/ConferenceForm__c/fields/Relaxation_Station__c.field-meta.xml
<CustomField>
    <fullName>Relaxation_Station__c</fullName>
    <label>Relaxation Station</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>