force-app/main/default/objects/ConferenceForm__c/fields/Resource_Table_Items__c.field-meta.xml
<CustomField>
    <fullName>Resource_Table_Items__c</fullName>
    <label>Resource Table Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>