force-app/main/default/objects/ConferenceForm__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role (select one that best applies):</description>
    <label>Role:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youth Participant</fullName>
            </value>
            <value>
                <fullName>Community School Coordinator/Director</fullName>
            </value>
            <value>
                <fullName>Community School Manager</fullName>
            </value>
            <value>
                <fullName>Principal/School Leader</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Superintendent</fullName>
            </value>
            <value>
                <fullName>District Staff</fullName>
            </value>
            <value>
                <fullName>University Staff</fullName>
            </value>
            <value>
                <fullName>Community-Based Organization Partner</fullName>
            </value>
            <value>
                <fullName>Health Partner</fullName>
            </value>
            <value>
                <fullName>Mental Health Partner</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>School Social Worker</fullName>
            </value>
            <value>
                <fullName>SNUG Partner</fullName>
            </value>
            <value>
                <fullName>Family Engagement Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>