force-app/main/default/objects/ConferenceForm__c/fields/Room_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Room_Arrangements__c</fullName>
    <description>Select which room arrangements you could make work for your presentation (check all that apply):</description>
    <label>Room Arrangements:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round Tables of 8 to 10</fullName>
            </value>
            <value>
                <fullName>Classroom Style (chair with table in front)</fullName>
            </value>
            <value>
                <fullName>Chairs Only (space in the room for movement)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>