force-app/main/default/objects/ConferenceForm__c/fields/Room_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Room_Set_Up__c</fullName>
    <description>Room Set Up (select ONE)</description>
    <label>Room Set Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I can present my topic with the room arrangement I was assigned</fullName>
            </value>
            <value>
                <fullName>The room arrangement I was assigned will not work for my presentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>