force-app/main/default/objects/ConferenceForm__c/fields/School_s_Out_Friday_2025__c.field-meta.xml
<CustomField>
    <fullName>School_s_Out_Friday_2025__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School&apos;s Out Friday 2025</label>
    <type>Checkbox</type>
</CustomField>