force-app/main/default/objects/ConferenceForm__c/fields/School_s_Out_Room_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>School_s_Out_Room_Sponsorship__c</fullName>
    <label>School&apos;s Out Room Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>