force-app/main/default/objects/ConferenceForm__c/fields/Schools_Out_Saturday_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Schools_Out_Saturday_Ticket__c</fullName>
    <label>Schools Out Saturday Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>