force-app/main/default/objects/ConferenceForm__c/fields/Selected_Award__c.field-meta.xml
<CustomField>
    <fullName>Selected_Award__c</fullName>
    <description>Select the Award (Choose ONLY 1 - Those submitting more than one will be disqualified.)</description>
    <label>Selected Award</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Network for Youth Success QUALITY LEADERSHIP AWARD</fullName>
            </value>
            <value>
                <fullName>The Network for Youth Success EXEMPLARY AWARD OF PROFESSIONALISM</fullName>
            </value>
            <value>
                <fullName>The Network for Youth Success PROGRAM AWARD OF EXCELLENCE AND INNOVATION</fullName>
            </value>
            <value>
                <fullName>The Network for Youth Success CHAMPION AWARD</fullName>
            </value>
            <value>
                <fullName>The Network for Youth Success REGIONAL NETWORK LEADER AWARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>