force-app/main/default/objects/ConferenceForm__c/fields/Session_Description__c.field-meta.xml
<CustomField>
    <fullName>Session_Description__c</fullName>
    <description>Session Description - In 100 words (or less), please provide a short description of your session. This description, or a shortened version of it, will be used in our conference brochure. (What content will you cover? What will participant&apos;s get out of the session?)</description>
    <label>Session Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>