force-app/main/default/objects/ConferenceForm__c/fields/Session_Goals__c.field-meta.xml
<CustomField>
    <fullName>Session_Goals__c</fullName>
    <description>Session Goals - Please provide at least one goal for your session to accomplish. (A general statement that describes the knowledge and/or skills participants will gain upon completing this session.)</description>
    <label>Session Goals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>