force-app/main/default/objects/ConferenceForm__c/fields/Session_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Session_Objectives__c</fullName>
    <description>Session Objectives - Please provide 1-3 session objectives in the space provided. In other words, participants will accomplish the session goal(s) by…</description>
    <label>Session Objectives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>