force-app/main/default/objects/ConferenceForm__c/fields/Session_Topics__c.field-meta.xml
<CustomField>
    <fullName>Session_Topics__c</fullName>
    <description>Session Topic(s): (check all that apply)</description>
    <label>Session Topic(s):</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Schools Essentials</fullName>
            </value>
            <value>
                <fullName>MTSS / PBIS</fullName>
            </value>
            <value>
                <fullName>Equity &amp; Resilience</fullName>
            </value>
            <value>
                <fullName>Restorative Practices</fullName>
            </value>
            <value>
                <fullName>Positive Behavioral Interventions and Supports</fullName>
            </value>
            <value>
                <fullName>Justice, Equity, Diversity, &amp; Inclusion (JEDI)</fullName>
            </value>
            <value>
                <fullName>Physical Activities/Team Building</fullName>
            </value>
            <value>
                <fullName>Social &amp; Emotional Learning</fullName>
            </value>
            <value>
                <fullName>STEM/STEAM</fullName>
            </value>
            <value>
                <fullName>Guiding Children&apos;s Behaviors</fullName>
            </value>
            <value>
                <fullName>Teen Programing</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Program Sustainability</fullName>
            </value>
            <value>
                <fullName>Program Quality Improvement</fullName>
            </value>
            <value>
                <fullName>Leadership Development for Professionals</fullName>
            </value>
            <value>
                <fullName>Family Engagement</fullName>
            </value>
            <value>
                <fullName>The Arts</fullName>
            </value>
            <value>
                <fullName>Culturally Responsive Programming and Practices</fullName>
            </value>
            <value>
                <fullName>21st C. Skills</fullName>
            </value>
            <value>
                <fullName>Process of Registering as a SACC Program</fullName>
            </value>
            <value>
                <fullName>Staff Motivation and Supervision</fullName>
            </value>
            <value>
                <fullName>Staff Retention</fullName>
            </value>
            <value>
                <fullName>Other (please describe below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>