force-app/main/default/objects/ConferenceForm__c/fields/Sessions_Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Intended_Audience__c</fullName>
    <description>Session&apos;s Intended Audience: (check all that apply)</description>
    <label>Session&apos;s Intended Audience:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Community Schools</fullName>
            </value>
            <value>
                <fullName>Well Established Community Schools</fullName>
            </value>
            <value>
                <fullName>Long Standing Community Schools</fullName>
            </value>
            <value>
                <fullName>OST Front-Line Staff</fullName>
            </value>
            <value>
                <fullName>OST Supervisors</fullName>
            </value>
            <value>
                <fullName>OST Executive Directors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>