force-app/main/default/objects/ConferenceForm__c/fields/Silver_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Silver_Sponsorship__c</fullName>
    <label>Silver Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>