force-app/main/default/objects/ConferenceForm__c/fields/Site_Visit_Wednesday_2025__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Wednesday_2025__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Visit Wednesday 2025</label>
    <type>Checkbox</type>
</CustomField>