force-app/main/default/objects/ConferenceForm__c/fields/Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level__c</fullName>
    <description>Sponsorship Level (check all that apply):</description>
    <label>Sponsorship Level:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum Level</fullName>
            </value>
            <value>
                <fullName>Add-On Content, Opportunity</fullName>
            </value>
            <value>
                <fullName>Gold Level</fullName>
            </value>
            <value>
                <fullName>Silver Level</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>