force-app/main/default/objects/ConferenceForm__c/fields/Studentsfamily_members_as_part_of_team__c.field-meta.xml
<CustomField>
    <fullName>Studentsfamily_members_as_part_of_team__c</fullName>
    <description>Are you considering bringing students and/or family members as part of your team?</description>
    <label>Students/family members as part of team?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>