force-app/main/default/objects/ConferenceForm__c/fields/Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Submission_URL__c</fullName>
    <formula>&quot;newyorkstatenetworkforyouthsucces.my.salesforce-sites.com/forms/apex/GuestPreviewForms?id=&quot; + 
IF(
    ISBLANK(Host_Conference_Form__c),
    Form_Response__r.Name,
    Host_Conference_Form__r.Form_Response__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission URL</label>
    <type>Text</type>
</CustomField>