force-app/main/default/objects/ConferenceForm__c/fields/Target_Audience_Age_Groups__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Age_Groups__c</fullName>
    <description>Age Group(s) Your Target Audience Works With (check all that apply):</description>
    <label>Target Audience Age Group(s):</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Adults</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>