force-app/main/default/objects/ConferenceForm__c/fields/Two_Day_Community_Schools_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Two_Day_Community_Schools_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Day Community Schools Ticket 2025</label>
    <type>Checkbox</type>
</CustomField>