force-app/main/default/objects/ConferenceForm__c/fields/Two_Day_School_s_Out_2025__c.field-meta.xml
<CustomField>
    <fullName>Two_Day_School_s_Out_2025__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Day School&apos;s Out 2025</label>
    <type>Checkbox</type>
</CustomField>