force-app/main/default/objects/ConferenceForm__c/fields/Two_Day_Schools_Out_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Two_Day_Schools_Out_Ticket__c</fullName>
    <label>Two Day Schools Out Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>