force-app/main/default/objects/ConferenceForm__c/fields/Unable_to_present_comments__c.field-meta.xml
<CustomField>
    <fullName>Unable_to_present_comments__c</fullName>
    <description>If you are unable to present at the selected time, and would like us to reach out to you, please comment below.</description>
    <label>Unable to present comments:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>